--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     Notably, BBox-Adapter (AI Feedback) demonstrates competitive performance compared to BBox-Adapter (Ground-Truth), which demonstrates its robust generalization capability across datasets, even in the absence of ground-truth answers.
     Furthermore, BBox-Adapter (Combined) achieves the highest performance among the three variations.
     This enhanced performance can be attributed to the combination of high-quality initial positive sets derived from ground-truth solutions and the dynamic updating of positive sets through AI feedback, leading to the continuous self-improvement of BBox-Adapter. 
-    <h3 class="title">Play-and-Play</h3>
+    <h3 class="title">Plug-and-Play</h3>
     <br>
     <img src="static/images/pnp.png" alt="MY ALT TEXT">
     <br>
