--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold;"><img src="static/images/icon.png" alt="Alt text" style="height: 1.5em; vertical-align: middle;" />EHR-Agent<br><span style="font-size: 0.8em; font-weight: normal;"> Code Empowers Large Language Models for Few-shot Complex Tabular Reasoning on Electronic Health Records</span></h1>
+            <h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold;"><img src="static/images/cartoon.png" alt="Alt text" style="height: 1.5em; vertical-align: middle;" />EHR-Agent<br><span style="font-size: 0.8em; font-weight: normal;"> Code Empowers Large Language Models for Few-shot Complex Tabular Reasoning on Electronic Health Records</span></h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://haotiansun.tech" target="_blank">Haotian Sun</a><sup>*</sup>,</span>
+                <a href="https://wshi83.github.io/" target="_blank">Wenqi Shi</a><sup>*</sup>,</span>
                 <span class="author-block">
-                  <a href="https://night-chen.github.io" target="_blank">Yuchen Zhuang</a><sup>*</sup>,</span>
+                  <a href="https://ritaranx.github.io/" target="_blank">Ran Xu</a><sup>*</sup>,</span>
                   <span class="author-block">
-                    <a href="http://www.weiwei.one" target="_blank">Wei Wei</a><sup></sup>,</span>
+                    <a href="https://night-chen.github.io" target="_blank">Yuchen Zhuang</a><sup></sup>,</span>
                     <span class="author-block">
                       <a href="http://chaozhang.org" target="_blank">Chao Zhang</a><sup></sup>,</span>
                   <span class="author-block">
