--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"> --> 
 
 
-  <title>EHR-Agent</title>
+  <title>EHRAgent</title>
   <link rel="icon" type="image/x-icon" href="static/images/icon.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -52,19 +52,29 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold;"><img src="static/images/cartoon.png" alt="Alt text" style="height: 1.5em; vertical-align: middle;" />EHR-Agent<br><span style="font-size: 0.8em; font-weight: normal;"> Code Empowers Large Language Models for Few-shot Complex Tabular Reasoning on Electronic Health Records</span></h1>
+            <h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold;"><img src="static/images/cartoon.png" alt="Alt text" style="height: 1.5em; vertical-align: middle;" />EHRAgent<br><span style="font-size: 0.8em; font-weight: normal;"> Code Empowers Large Language Models for Few-shot Complex Tabular Reasoning on Electronic Health Records</span></h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
                 <a href="https://wshi83.github.io/" target="_blank">Wenqi Shi</a><sup>*</sup>,</span>
-                <span class="author-block">
-                  <a href="https://ritaranx.github.io/" target="_blank">Ran Xu</a><sup>*</sup>,</span>
-                  <span class="author-block">
-                    <a href="https://night-chen.github.io" target="_blank">Yuchen Zhuang</a><sup></sup>,</span>
-                    <span class="author-block">
-                      <a href="http://chaozhang.org" target="_blank">Chao Zhang</a><sup></sup>,</span>
-                  <span class="author-block">
-                    <a href="https://bo-dai.github.io" target="_blank">Bo Dai</a>
+              <span class="author-block">
+                <a href="https://ritaranx.github.io/" target="_blank">Ran Xu</a><sup>*</sup>,</span>
+              <span class="author-block">
+                <a href="https://night-chen.github.io" target="_blank">Yuchen Zhuang</a><sup></sup>,</span>
+              <span class="author-block">
+                <a href="https://yueyu1030.github.io/" target="_blank">Yue Yu</a><sup></sup>,</span>
+              <span class="author-block">
+                <a href="https://jieyuz2.github.io/" target="_blank">Jieyu Zhang</a><sup></sup>,</span>      
+              <span class="author-block">
+                <a href="https://scholar.google.com/citations?hl=en&user=3gVKIOwAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Hang Wu</a><sup></sup>,</span>      
+              <span class="author-block">
+                <a href="https://scholar.google.com/citations?hl=en&user=uYPzS5MAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Yuanda Zhu</a><sup></sup>,</span>     
+              <span class="author-block">
+                <a href="https://joyceho.github.io/" target="_blank">Joyce C. Ho</a><sup></sup>,</span>     
+              <span class="author-block">
+                <a href="https://cs.emory.edu/~jyang71/" target="_blank">Carl Yang</a><sup></sup>,</span>     
+              <span class="author-block">
+                <a href="https://bme.gatech.edu/bme/faculty/May-Dongmei-Wang" target="_blank">May D. Wang</a>
                   </span>
                   
                   </div>
