--- a/index.html
+++ b/index.html
@@ -56,31 +56,33 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://wshi83.github.io/" target="_blank">Wenqi Shi</a><sup>*</sup>,</span>
+                <a href="https://wshi83.github.io/" target="_blank">Wenqi Shi</a><sup>*1</sup>,</span>
               <span class="author-block">
-                <a href="https://ritaranx.github.io/" target="_blank">Ran Xu</a><sup>*</sup>,</span>
+                <a href="https://ritaranx.github.io/" target="_blank">Ran Xu</a><sup>*2</sup>,</span>
               <span class="author-block">
-                <a href="https://night-chen.github.io" target="_blank">Yuchen Zhuang</a><sup></sup>,</span>
+                <a href="https://night-chen.github.io" target="_blank">Yuchen Zhuang</a><sup>1</sup>,</span>
               <span class="author-block">
-                <a href="https://yueyu1030.github.io/" target="_blank">Yue Yu</a><sup></sup>,</span>
+                <a href="https://yueyu1030.github.io/" target="_blank">Yue Yu</a><sup>1</sup>,</span>
               <span class="author-block">
-                <a href="https://jieyuz2.github.io/" target="_blank">Jieyu Zhang</a><sup></sup>,</span>      
+                <a href="https://jieyuz2.github.io/" target="_blank">Jieyu Zhang</a><sup>3</sup>,</span>      
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?hl=en&user=3gVKIOwAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Hang Wu</a><sup></sup>,</span>      
+                <a href="https://scholar.google.com/citations?hl=en&user=3gVKIOwAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Hang Wu</a><sup>1</sup>,</span>      
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?hl=en&user=uYPzS5MAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Yuanda Zhu</a><sup></sup>,</span>     
+                <a href="https://scholar.google.com/citations?hl=en&user=uYPzS5MAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Yuanda Zhu</a><sup>1</sup>,</span>     
               <span class="author-block">
-                <a href="https://joyceho.github.io/" target="_blank">Joyce C. Ho</a><sup></sup>,</span>     
+                <a href="https://joyceho.github.io/" target="_blank">Joyce C. Ho</a><sup>2</sup>,</span>     
               <span class="author-block">
-                <a href="https://cs.emory.edu/~jyang71/" target="_blank">Carl Yang</a><sup></sup>,</span>     
+                <a href="https://cs.emory.edu/~jyang71/" target="_blank">Carl Yang</a><sup>2</sup>,</span>     
               <span class="author-block">
-                <a href="https://bme.gatech.edu/bme/faculty/May-Dongmei-Wang" target="_blank">May D. Wang</a>
+                <a href="https://bme.gatech.edu/bme/faculty/May-Dongmei-Wang" target="_blank">May D. Wang</a><sup>1</sup>
                   </span>
                   
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Georgia Institute of Technology</span>
+                    <span class="author-block"><sup>1</sup>Georgia Institute of Technology,</span>
+                    <span class="author-block"><sup>2</sup>Emory University</span>
+                    <span class="author-block"><sup>3</sup>University of Washington</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div>
 
