--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://wshi83.github.io/" target="_blank">Wenqi Shi</a><sup>*1</sup>,</span>
+                <a href="https://wshi83.github.io/" target="_blank">Wenqi Shi</a><sup>1*</sup>,</span>
               <span class="author-block">
-                <a href="https://ritaranx.github.io/" target="_blank">Ran Xu</a><sup>*2</sup>,</span>
+                <a href="https://ritaranx.github.io/" target="_blank">Ran Xu</a><sup>2*</sup>,</span>
               <span class="author-block">
                 <a href="https://night-chen.github.io" target="_blank">Yuchen Zhuang</a><sup>1</sup>,</span>
               <span class="author-block">
@@ -81,7 +81,7 @@
 
                   <div class="is-size-5 publication-authors">
                     <span class="author-block"><sup>1</sup>Georgia Institute of Technology,</span>
-                    <span class="author-block"><sup>2</sup>Emory University</span>
+                    <span class="author-block"><sup>2</sup>Emory University,</span>
                     <span class="author-block"><sup>3</sup>University of Washington</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div>
@@ -90,7 +90,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/2402.08219.pdf" target="_blank"
+                        <a href="https://arxiv.org/pdf/2401.07128.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -112,7 +112,7 @@
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/haotiansun14/BBox-Adapter" target="_blank"
+                    <a href="https://github.com/wshi83/EhrAgent" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
@@ -123,7 +123,7 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/2402.08219" target="_blank"
+                  <a href="https://arxiv.org/abs/2401.07128" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
