--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
         <!-- Your video here -->
-        <img src="static/images/banner.gif" alt="MY ALT TEXT"/>
+        <img src="static/images/EHRAgent-video.gif" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
         BBox-Adapter is a lightweight adapter that adapts black-box LLMs for specific tasks by fine-tuning a smaller language model iteratively.       </h2>
     </div>
