--- a/index.html
+++ b/index.html
@@ -169,8 +169,27 @@
 </section>
 <!-- End paper abstract -->
 
-
-
+<section class="section" id="Examples">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sample Responses Comparison</title>
+</head>
+<body>
+  <div class="dropdown-container">
+      <select class="dropdown">
+          <option value="">--Select--</option>
+          <option value="">Example 0</option>
+          <!-- Add options here -->
+      </select>
+      <div class="response">
+          <div class="response-header">Examples of AutoGen and EHRAgent</div>
+          <textarea class="response-text" placeholder="Response from ChatGPT"></textarea>
+      </div>
+  </div>
+  <script src="script.js"></script>
+</body>
+</section>
 
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
