--- a/index.html
+++ b/index.html
@@ -170,25 +170,40 @@
 <!-- End paper abstract -->
 
 <section class="section" id="Examples">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sample Responses Comparison</title>
-</head>
-<body>
-  <div class="dropdown-container">
-      <select class="dropdown">
-          <option value="">--Select--</option>
-          <option value="">Example 0</option>
-          <!-- Add options here -->
-      </select>
-      <div class="response">
-          <div class="response-header">Examples of AutoGen and EHRAgent</div>
-          <textarea class="response-text" placeholder="Response from ChatGPT"></textarea>
+  <div class="container is-max-desktop content">
+    <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Dropdown Example</title>
+      <style>
+        .dropdown-container {
+          margin: 20px;
+          padding: 10px;
+        }
+        select {
+          width: 200px;
+          padding: 5px;
+          margin-right: 10px;
+        }
+      </style>
+      </head>
+      <body>
+      
+      <div class="dropdown-container">
+        <label for="example0">Example 0</label>
+        <br>
+        <select id="example0" name="example0">
+          <option value="gpt4">Chameleon (GPT-4)</option>
+          <!-- Add other options here -->
+        </select>
+        <select id="example1" name="example1">
+          <option value="chatgpt">Chameleon (ChatGPT)</option>
+          <!-- Add other options here -->
+        </select>
       </div>
+      
+      </body>
   </div>
-  <script src="script.js"></script>
-</body>
 </section>
 
 <section class="section" id="BibTeX">
