--- a/index.html
+++ b/index.html
@@ -174,7 +174,6 @@
     <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Dropdown Example</title>
       <style>
         .dropdown-container {
           margin: 20px;
@@ -190,14 +189,14 @@
       <body>
       
       <div class="dropdown-container">
-        <label for="example0">Example 0</label>
+        <label for="example">Dropdown Example</label>
         <br>
         <select id="example0" name="example0">
-          <option value="gpt4">Chameleon (GPT-4)</option>
-          <!-- Add other options here -->
-        </select>
-        <select id="example1" name="example1">
-          <option value="chatgpt">Chameleon (ChatGPT)</option>
+          <option value="example 0">Example 0</option>
+          <div style="display: flex; justify-content: center;">
+            <img src="static/images/teaser.png" alt="MY ALT TEXT"width="450" height="310">
+          </div>
+
           <!-- Add other options here -->
         </select>
       </div>
