--- a/index.html
+++ b/index.html
@@ -189,13 +189,19 @@
       <body>
       
       <div class="dropdown-container">
-        <label for="example">Dropdown Example</label>
+        <label for="exampleSelector">Dropdown Example</label>
         <br>
-        <select id="example0" name="example0">
+        <select id="exampleSelector" name="exampleSelector">
           <option value="example 0">Example 0</option>
-          <div style="display: flex; justify-content: center;">
-            <img src="static/images/teaser.png" alt="MY ALT TEXT"width="450" height="310">
-          </div>
+          <option value="example 1">Example 0</option>
+          <option value="example 2">Example 0</option>
+        </select>
+      </div>
+      <div style="display: flex; justify-content: center;">
+        <img id="example 0" src="static/images/teaser.png" alt="MY ALT TEXT"width="450" height="310">
+        <img id="example 1" src="static/images/teaser.png" alt="MY ALT TEXT"width="450" height="310">
+        <img id="example 2" src="static/images/teaser.png" alt="MY ALT TEXT"width="450" height="310">
+      </div>
 
           <!-- Add other options here -->
         </select>
