--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
     <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Dropdown Example</title>
       <style>
         .dropdown-container {
           margin: 20px;
@@ -189,20 +190,11 @@
       <body>
       
       <div class="dropdown-container">
-        <label for="exampleSelector">Dropdown Example</label>
+        <label for="exampleSelector">Select the example:</label>
         <br>
         <select id="exampleSelector" name="exampleSelector">
           <option value="example 0">Example 0</option>
-          <option value="example 1">Example 0</option>
-          <option value="example 2">Example 0</option>
-        </select>
-      </div>
-      <div style="display: flex; justify-content: center;">
-        <img id="example 0" src="static/images/teaser.png" alt="MY ALT TEXT"width="450" height="310">
-        <img id="example 1" src="static/images/teaser.png" alt="MY ALT TEXT"width="450" height="310">
-        <img id="example 2" src="static/images/teaser.png" alt="MY ALT TEXT"width="450" height="310">
-      </div>
-
+          
           <!-- Add other options here -->
         </select>
       </div>
