--- a/index.html
+++ b/index.html
@@ -193,12 +193,18 @@
         <label for="exampleSelector">Select the example:</label>
         <br>
         <select id="exampleSelector" name="exampleSelector">
-          <option value="example 0">Example 0</option>
-          
+          <option value="example0">Example 0</option>
+          <option value="example1">Example 0</option>
+          <option value="example2">Example 0</option>
+          <option value="example3">Example 0</option>
           <!-- Add other options here -->
         </select>
       </div>
-      
+      <div id="exampleDisplay">
+        <img id="example0" src="static/images/teaser.png" alt="Image 1">
+        <img id="example1" src="static/images/teaser.png" alt="Image 2">
+        <img id="example2" src="static/images/teaser.png" alt="Image 3">
+    </div>
       </body>
   </div>
 </section>
