--- a/index.html
+++ b/index.html
@@ -194,13 +194,13 @@
         <br>
         <select id="exampleSelector" name="exampleSelector">
           <option value="example0">Example 0</option>
-          <option value="example1">Example 0</option>
-          <option value="example2">Example 0</option>
-          <option value="example3">Example 0</option>
+          <option value="example1">Example 1</option>
+          <option value="example2">Example 2</option>
+          <option value="example3">Example 3</option>
           <!-- Add other options here -->
         </select>
       </div>
-      <div id="exampleDisplay">
+      <div id="exampleDisplay" style="display: flex; justify-content: center;">
         <img id="example0" src="static/images/teaser.png" alt="Image 1">
         <img id="example1" src="static/images/teaser.png" alt="Image 2">
         <img id="example2" src="static/images/teaser.png" alt="Image 3">
