--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 
 <section class="section" id="Examples">
   <div class="container is-max-desktop content">
+    <h2 class="title">Examples</h2>
     <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
