--- a/index.html
+++ b/index.html
@@ -206,6 +206,18 @@
         <img id="example1" src="static/images/teaser.png" alt="Image 2">
         <img id="example2" src="static/images/teaser.png" alt="Image 3">
     </div>
+    <script>
+      document.getElementById('imageSelector').addEventListener('change', function() {
+          // Hide all images
+          document.querySelectorAll('#imageDisplay img').forEach(function(img) {
+              img.classList.remove('visible');
+          });
+  
+          // Show selected image
+          const selectedValue = this.value;
+          document.getElementById(selectedValue).classList.add('visible');
+      });
+  </script>
       </body>
   </div>
 </section>
