--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
         <img id="example2" src="static/images/teaser.png" alt="Image 3">
     </div>
     <script>
-      document.getElementById('imageSelector').addEventListener('change', function() {
+      document.getElementById('exampleSelector').addEventListener('change', function() {
           // Hide all images
-          document.querySelectorAll('#imageDisplay img').forEach(function(img) {
+          document.querySelectorAll('#exampleDisplay img').forEach(function(img) {
               img.classList.remove('visible');
           });
   
