--- a/index.html
+++ b/index.html
@@ -186,6 +186,15 @@
           padding: 5px;
           margin-right: 10px;
         }
+        img {
+          max-width: 100%;
+          height: auto;
+          display: none;
+        }
+
+        .visible {
+          display: block;
+        }
       </style>
       </head>
       <body>
