--- a/index.html
+++ b/index.html
@@ -203,16 +203,23 @@
         <label for="exampleSelector">Select the example:</label>
         <br>
         <select id="exampleSelector" name="exampleSelector">
+          <option value="">--Select--</option>
           <option value="example0">Example 0</option>
           <option value="example1">Example 1</option>
           <option value="example2">Example 2</option>
+          <option value="example3">Example 3</option>
+          <option value="example4">Example 4</option>
+          <option value="example5">Example 5</option>
           <!-- Add other options here -->
         </select>
       </div>
       <div id="exampleDisplay">
-        <img id="example0" src="static/images/teaser.png" alt="Image 1">
-        <img id="example1" src="static/images/teaser.png" alt="Image 2">
-        <img id="example2" src="static/images/teaser.png" alt="Image 3">
+        <img id="example0" src="static/images/web-mimiciii-case1.gif" alt="Image 1">
+        <img id="example1" src="static/images/web-mimiciii-case2.gif" alt="Image 2">
+        <img id="example2" src="static/images/web-eicu-case3.gif" alt="Image 3">
+        <img id="example3" src="static/images/web-eicu-case4.gif" alt="Image 4">
+        <img id="example4" src="static/images/web-treqs-case5.gif" alt="Image 5">
+        <img id="example5" src="static/images/web-treqs-case6.gif" alt="Image 6">
     </div>
     <script>
       document.getElementById('exampleSelector').addEventListener('change', function() {
