--- a/index.html
+++ b/index.html
@@ -213,22 +213,22 @@
         </select>
       </div>
       <div id="example0" class="figure" style="display:none;">
-        <img class="figure" src="static/images/web-mimiciii-case1.gif" alt="Image 1">
+        <img src="static/images/web-mimiciii-case1.gif" alt="Image 1">
       </div>
       <div id="example1" class="figure" style="display:none;">
-        <img class="figure" src="static/images/web-mimiciii-case2.gif" alt="Image 2">
+        <img src="static/images/web-mimiciii-case2.gif" alt="Image 2">
       </div>
       <div id="example2" class="figure" style="display:none;">
-        <img class="figure" src="static/images/web-eicu-case3.gif" alt="Image 3">
+        <img src="static/images/web-eicu-case3.gif" alt="Image 3">
       </div>
       <div id="example3" class="figure" style="display:none;">
-        <img class="figure" src="static/images/web-eicu-case4.gif" alt="Image 4">
+        <img src="static/images/web-eicu-case4.gif" alt="Image 4">
       </div>
       <div id="example4" class="figure" style="display:none;">
-        <img class="figure" src="static/images/web-treqs-case5.gif" alt="Image 5">
+        <img src="static/images/web-treqs-case5.gif" alt="Image 5">
       </div>
       <div id="example5" class="figure" style="display:none;">
-        <img class="figure" src="static/images/web-treqs-case6.gif" alt="Image 6">
+        <img src="static/images/web-treqs-case6.gif" alt="Image 6">
       </div>
     </div>
     <script>
