--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       </div>
     </div>
     <script>
-      document.getElementById('figureSelector').addEventListener('change', function() {
+      document.getElementById('exampleSelector').addEventListener('change', function() {
           // Hide all figures first
           document.querySelectorAll('.figure').forEach(function(figure) {
               figure.style.display = 'none';
