--- a/index.html
+++ b/index.html
@@ -251,11 +251,11 @@
 
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
-    <h2 class="title">Introduction</h2>
-    Adapting black-box LLMs through fine-tuning APIs has several critical issues on <b>transparency</b>, <b>privacy</b>, and <b>cost</b>. The adaptation of black-box LLMs without the use of APIs remains an unresolved challenge.
+    <h2 class="title">Experiments</h2>
+    EHRAgent significantly outperforms all the baselines on all three datasets with a performance gain of <b>19.92%</b>, <b>12.41%</b>, and <b>29.60%</b>, respectively. This indicates the efficacy of our key designs, namely interactive coding with environment feedback and domain knowledge injection, as they gradually refine the generated code and provide sufficient back ground knowledge during the planning process.
     <br><br>
     <div style="display: block; justify-content: center;">
-      <img src="static/images/teaser.png" alt="MY ALT TEXT"width="450" height="310">
+      <img src="static/images/main-results.png" alt="MY ALT TEXT">
   </div>
     <br>
     Due to the black-box nature, users are unable to access
