--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     <h2 class="title">Effect of Question Complexity</h2>
     <br>
     We take a closer look at the model performance by considering multi-dimensional measurements of question complexity, exhibited in Figure 3. Although the performances of both EHRAgent and the baselines gener-ally decrease with an increase in task complexity (either quantified as more elements in queries or more columns in solutions), EHRAgent consistently outperforms all the baselines at various levels of difficulty. 
-    <div classs="image-row">
+    <div class="image-row">
       <img src="static/images/line_q_tag_sr-v2.png" alt="MY ALT TEXT">
       <img src="static/images/line_q_tag_cr-v2.png" alt="MY ALT TEXT">
       <img src="static/images/line_column_sr-v2.png" alt="MY ALT TEXT">
